# secpipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  USAGE.md  docker-compose.yaml  docker-compose.yml  hub-config.json  pyproject.toml  setup.py
ai/: README.md  (+3 more)
backend/: Dockerfile  README.md  mcp-config.json  pyproject.toml
backend/benchmarks/by_category/secret_detection/: README.md  bench_comparison.py  compare_tools.py
backend/src/: main.py
backend/src/api/: fuzzing.py  runs.py  system.py  workflows.py
backend/src/core/: prefect_manager.py  setup.py  workflow_discovery.py
backend/src/models/: findings.py
backend/src/services/: prefect_stats_monitor.py
backend/src/temporal/: manager.py
backend/tests/: conftest.py  test_prefect_stats_monitor.py
backend/toolbox/modules/: base.py
backend/toolbox/modules/ai_security/: __init__.py  garak.py
backend/toolbox/modules/analyzer/: __init__.py  bandit_analyzer.py  llm_analyzer.py  mypy_analyzer.py  security_analyzer.py
backend/toolbox/modules/android/: __init__.py  jadx_decompiler.py  mobsf_scanner.py  opengrep_android.py
backend/toolbox/modules/cicd_security/: __init__.py  zizmor.py
backend/toolbox/modules/fuzzer/: atheris_fuzzer.py  cargo_fuzzer.py
backend/toolbox/modules/fuzzing/: __init__.py  aflplusplus.py  aflrs.py  atheris.py  cargo_fuzz.py  go_fuzz.py  libfuzzer.py  oss_fuzz.py
backend/toolbox/modules/infrastructure/: __init__.py  checkov.py  hadolint.py  kubesec.py  polaris.py
backend/toolbox/modules/penetration_testing/: __init__.py  masscan.py  nmap.py  nuclei.py  sqlmap.py
backend/toolbox/modules/reporter/: __init__.py  sarif_reporter.py
backend/toolbox/modules/scanner/: __init__.py  dependency_scanner.py  file_scanner.py
backend/toolbox/modules/secret_detection/: __init__.py  gitleaks.py  llm_secret_detector.py  trufflehog.py
backend/toolbox/modules/static_analysis/: __init__.py  bandit.py  opengrep.py
backend/toolbox/workflows/: __init__.py  registry.py
backend/toolbox/workflows/android_static_analysis/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/comprehensive/: __init__.py
backend/toolbox/workflows/gitleaks_detection/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/llm_secret_detection/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/python_sast/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/security_assessment/: Dockerfile  metadata.yaml  requirements.txt  workflow.py
backend/toolbox/workflows/trufflehog_detection/: __init__.py  activities.py  metadata.yaml  workflow.py
cli/: .gitignore  README.md  completion_install.py  main.py  pyproject.toml
cli/src/fuzzforge_cli/: __init__.py  api_validation.py  completion.py  config.py  constants.py  database.py  exceptions.py  fuzzy.py  ingest_utils.py  main.py  progress.py  validation.py  worker_manager.py
cli/src/fuzzforge_cli/commands/: __init__.py  ai.py  config.py  findings.py  ingest.py  init.py  monitor.py  status.py  worker.py  workflow_exec.py  workflows.py
cli/tests/: test_platform_detection.py
fuzzforge-cli/: Makefile  README.md  pyproject.toml  ruff.toml
fuzzforge-cli/src/fuzzforge_cli/: __main__.py  application.py  context.py  utilities.py
fuzzforge-cli/src/fuzzforge_cli/commands/: mcp.py  modules.py  projects.py
fuzzforge-cli/src/fuzzforge_cli/tui/: helpers.py
fuzzforge-common/: Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
fuzzforge-common/src/fuzzforge_common/: __init__.py  exceptions.py
fuzzforge-common/src/fuzzforge_common/hub/: __init__.py  client.py  executor.py  models.py  registry.py
fuzzforge-common/src/fuzzforge_common/sandboxes/: __init__.py
fuzzforge-common/src/fuzzforge_common/storage/: __init__.py  configuration.py  exceptions.py  s3.py
fuzzforge-common/src/fuzzforge_common/temporal/: queues.py
fuzzforge-common/src/fuzzforge_common/workflows/: bridge_utils.py  default.py  modules.py
fuzzforge-common/tests/: conftest.py
fuzzforge-common/tests/unit/engines/: conftest.py  test_docker.py  test_podman.py
fuzzforge-common/tests/unit/storage/: test_storage.py
fuzzforge-mcp/: Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
fuzzforge-mcp/src/fuzzforge_mcp/: __main__.py  application.py  dependencies.py  exceptions.py  settings.py  storage.py
fuzzforge-mcp/src/fuzzforge_mcp/resources/: __init__.py  executions.py  modules.py  project.py  workflows.py
fuzzforge-mcp/src/fuzzforge_mcp/skills/: firmware-analysis.yaml  go-fuzzing.yaml
fuzzforge-mcp/src/fuzzforge_mcp/tools/: __init__.py  hub.py  modules.py  projects.py  reports.py  workflows.py
fuzzforge-mcp/tests/: conftest.py  test_resources.py
fuzzforge-modules/cargo-fuzzer/: Dockerfile  pyproject.toml
fuzzforge-modules/cargo-fuzzer/src/module/: mod.py  models.py  settings.py
fuzzforge-modules/crash-analyzer/: Dockerfile  pyproject.toml
fuzzforge-modules/crash-analyzer/src/module/: mod.py  models.py  settings.py
fuzzforge-modules/fuzzforge-module-template/: Dockerfile  pyproject.toml
fuzzforge-modules/fuzzforge-modules-sdk/: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
fuzzforge-modules/harness-tester/: Dockerfile  FEEDBACK_TYPES.md  Makefile  README.md  pyproject.toml
fuzzforge-modules/rust-analyzer/: Dockerfile  Makefile  pyproject.toml
fuzzforge-runner/: Makefile  README.md  pyproject.toml
fuzzforge-runner/src/fuzzforge_runner/: __init__.py  __main__.py  constants.py  exceptions.py  executor.py  orchestrator.py  runner.py  settings.py  storage.py
fuzzforge-runner/tests/: __init__.py  conftest.py
fuzzforge-tests/: Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
fuzzforge-tests/src/fuzzforge_tests/: __init__.py  conftest.py  fixtures.py
fuzzforge-types/: Makefile  README.md  pyproject.toml
fuzzforge-types/src/fuzzforge_types/: __init__.py  bases.py  definitions.py  executions.py  identifiers.py  modules.py  projects.py  workflows.py
(+187 files in other folders)
