[project]
name = "fuzzforge-oss"
version = "1.0.0"
description = "FuzzForge AI - AI-driven security research platform for local execution"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "FuzzingLabs", email = "contact@fuzzinglabs.com" }
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
    "fuzzforge-tests",
    "fuzzforge-common",
    "fuzzforge-mcp",
]

[tool.uv.workspace]
members = [
    "fuzzforge-common",
    "fuzzforge-mcp",
    "fuzzforge-cli",
    "fuzzforge-tests",
]

[tool.uv.sources]
fuzzforge-common = { workspace = true }
fuzzforge-mcp = { workspace = true }
fuzzforge-cli = { workspace = true }
fuzzforge-tests = { workspace = true }
