[project]
name = "backend"
version = "0.6.0"
description = "FuzzForge OSS backend"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "prefect>=3.4.18",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "docker>=7.0.0",
    "aiofiles>=23.0.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.12.15",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
