[project]
name = "fuzzforge-cli"
version = "0.6.0"
description = "FuzzForge CLI - Command-line interface for FuzzForge security testing platform"
readme = "README.md"
authors = [
    { name = "Tanguy Duhamel", email = "tduhamel@fuzzinglabs.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "sseclient-py>=1.8.0",
    "fuzzforge-sdk",
    "fuzzforge-ai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[project.scripts]
fuzzforge = "fuzzforge_cli.main:main"
ff = "fuzzforge_cli.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
fuzzforge-sdk = { path = "../sdk", editable = true }
fuzzforge-ai = { path = "../ai", editable = true }
