[project]
name = "fuzzforge-common"
version = "0.0.1"
description = "FuzzForge's common types and utilities."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzforge-types==0.0.1",
    "podman==5.6.0",
    "pydantic==2.12.4",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
tests = [
    "pytest==9.0.2",
]

[tool.uv.sources]
fuzzforge-types = { workspace = true }
