[project]
name = "fuzzforge-mcp"
version = "0.0.1"
description = "FuzzForge MCP Server - AI agent gateway for FuzzForge AI."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==2.14.1",
    "fuzzforge-common==0.0.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pyyaml>=6.0",
    "structlog==25.5.0",
]

[project.scripts]
fuzzforge-mcp = "fuzzforge_mcp.__main__:main"

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
tests = [
    "fuzzforge-tests==0.0.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
]

[tool.uv.sources]
fuzzforge-common = { workspace = true }
fuzzforge-tests = { workspace = true }
