[project]
name = "fuzzforge-runner"
version = "0.0.1"
description = "FuzzForge Runner - Direct execution engine for FuzzForge OSS."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzforge-common",
    "fuzzforge-types",
    "structlog>=25.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
fuzzforge-runner = "fuzzforge_runner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzforge_runner"]

[tool.uv.sources]
fuzzforge-common = { workspace = true }
fuzzforge-types = { workspace = true }
