[project]
name = "fuzzforge-tests"
version = "0.0.1"
description = "Common test utilities and fixtures for FuzzForge packages."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.8",
    "podman==5.6.0",
    "pytest==9.0.2",
    "fuzzforge-types==0.0.1",
    "testcontainers[minio]==4.13.3",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]

[tool.uv.sources]
fuzzforge-types = { workspace = true }
