[project]
name = "fuzzforge-types"
version = "0.0.1"
description = "Collection of types for the FuzzForge API."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic==2.12.4",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
