[project]
name = "fuzzforge-module-template"
version = "0.1.0"
description = "FIXME: Add module description"
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzforge-modules-sdk==0.0.1",
    "pydantic==2.12.4",
    "structlog==25.5.0",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
tests = [
    "pytest==9.0.2",
]

[project.scripts]
module = "module.__main__:main"

[tool.uv.sources]
fuzzforge-modules-sdk = { workspace = true }

[tool.uv]
package = true

# FuzzForge module metadata for AI agent discovery
[tool.fuzzforge.module]
# REQUIRED: Unique module identifier (should match Docker image name)
identifier = "fuzzforge-module-template"

# Optional: List of module identifiers that should run before this one
suggested_predecessors = []

# Optional: Whether this module supports continuous/background execution
continuous_mode = false

# REQUIRED: Use cases help AI agents understand when to use this module
# Include language/target info here (e.g., "Analyze Rust crate...")
use_cases = [
    "FIXME: Describe what this module does",
    "FIXME: Describe typical usage scenario"
]

# REQUIRED: What inputs the module expects
common_inputs = [
    "FIXME: List required input files or artifacts"
]

# REQUIRED: What outputs the module produces
output_artifacts = [
    "FIXME: List output files produced"
]
