[project]
name = "fuzzforge-modules-sdk"
version = "0.0.1"
description = "Software development kit (SDK) for FuzzForge's modules."
authors = []
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "podman==5.6.0",
    "pydantic==2.12.4",
    "tomlkit==0.13.3",
]

[project.optional-dependencies]
lints = [
    "bandit==1.8.6",
    "mypy==1.18.2",
    "ruff==0.14.4",
]
tests = [
    "pytest==9.0.2",
]

[project.scripts]
fuzzforge-modules-sdk = "fuzzforge_modules_sdk._cli.main:main"

[tool.setuptools.package-data]
fuzzforge_modules_sdk = [
    "assets/**/*",
    "templates/**/*",
]
