[project]
name = "fuzzforge-harness-tester"
version = "0.1.0"
description = "Tests and evaluates fuzz harnesses with detailed feedback for AI-driven iteration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzforge-modules-sdk==0.0.1",
    "pydantic==2.12.4",
    "structlog==25.5.0",
]

[project.scripts]
module = "module.__main__:main"

[tool.uv.sources]
fuzzforge-modules-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/module"]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]

# FuzzForge module metadata for AI agent discovery
[tool.fuzzforge.module]
identifier = "fuzzforge-harness-tester"
suggested_predecessors = ["fuzzforge-rust-analyzer"]
continuous_mode = false

use_cases = [
    "Validate Rust fuzz harnesses compile correctly",
    "Run short fuzzing trials to assess harness quality",
    "Provide detailed feedback for AI to improve harnesses",
    "Gate before running expensive long fuzzing campaigns"
]

common_inputs = [
    "fuzz-harnesses",
    "Cargo.toml",
    "rust-source-code"
]

output_artifacts = [
    "artifacts/harness-evaluation.json",
    "artifacts/feedback-summary.md",
    "results.json"
]

output_treatment = "Display artifacts/feedback-summary.md as rendered markdown for quick review. Read artifacts/harness-evaluation.json for detailed per-harness results with verdict (production_ready/needs_improvement/broken), score, strengths, and issues with suggestions."
